created by should be byon otherwise its not showing up on RHOAI dashboard which is odd
Signed-off-by: Balkrishna Pandey <pandeybk@users.noreply.github.com>

--- a/helm/templates/image-stream.yaml
+++ b/helm/templates/image-stream.yaml
@@ -10,7 +10,7 @@ metadata:
     meta.helm.sh/release-name: helm-release
     meta.helm.sh/release-namespace: redhat-ods-applications
   labels:
-    app.kubernetes.io/created-by: pipeline
+    app.kubernetes.io/created-by: byon
     opendatahub.io/dashboard: "true"
     opendatahub.io/notebook-image: "true"
     app.kubernetes.io/managed-by: Helm
